# add_library(PopcornCore)
#
# target_sources(PopcornCore PRIVATE Application.cpp      # used for BUILD
#
# PUBLIC FILE_SET HEADERS     # used for INSTALL BASE_DIRS ${ENGINE_INCLUDE_DIR}
# FILES include/Popcorn/Core/Application.h )
#
# target_include_directories(PopcornCore PUBLIC
# $<BUILD_INTERFACE:${ENGINE_INCLUDE_DIR}> $<INSTALL_INTERFACE:include> )
